--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "gitflow4code.features": [
+    {
+      "name": "feature/Sumit-SignUp_Static_page_CSS",
+      "base": "develop"
+    }
+  ]
 }
