--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.1.0",
     "node-fetch": "^3.3.2",
     "react": "^18",
+    "react-cookie": "^7.0.2",
     "react-dom": "^18"
   }
 }
