--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,10 @@
     {
       "name": "feature/Sumit-Folder",
       "base": "feature/Sumit-Homepage"
+    },
+    {
+      "name": "feature/sumit-settings",
+      "base": "develop"
     }
   ]
 }
