--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "14.1.0",
     "node-fetch": "^3.3.2",
     "react": "^18",
+    "react-calendar": "^4.8.0",
     "react-cookie": "^7.0.2",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-live-clock": "^6.1.20"
   }
 }
